Updated and added new listeners