@@ -1,23 +1,23 @@
 package dev.fileeditor.votl.listeners;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 import net.dv8tion.jda.api.events.interaction.command.CommandAutoCompleteInteractionEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-import net.dv8tion.jda.api.interactions.commands.Command;
+import net.dv8tion.jda.api.interactions.commands.Command.Choice;
 
 import dev.fileeditor.votl.base.command.CommandClient;
 import dev.fileeditor.votl.base.command.SlashCommand;
+import dev.fileeditor.votl.objects.annotation.Nonnull;
 import dev.fileeditor.votl.utils.database.DBUtil;
+import dev.fileeditor.votl.utils.message.MessageUtil;
 
 public class AutoCompleteListener extends ListenerAdapter {
 
 	private final List<SlashCommand> cmds;
-	private final List<String> groupMasterCmds = List.of("group delete", "group remove", "group rename", "group view", "sync ban", "sync unban", "sync kick");
-	private final List<String> groupSyncCmds = List.of("group leave", "group view");
 
 	private DBUtil db;
 
@@ -28,45 +28,120 @@ public class AutoCompleteListener extends ListenerAdapter {
 		
 	@Override
 	public void onCommandAutoCompleteInteraction(@Nonnull CommandAutoCompleteInteractionEvent event) {
-		if (event.getName().equals("help") && event.getFocusedOption().getName().equals("command")) {
+		String cmdName = event.getFullCommandName();
+		String focusedOption = event.getFocusedOption().getName();
+		if (cmdName.equals("help") && focusedOption.equals("command")) {
 			String value = event.getFocusedOption().getValue().toLowerCase().split(" ")[0];
-			List<Command.Choice> choices = cmds.stream()
+			List<Choice> choices = cmds.stream()
 				.filter(cmd -> cmd.getName().contains(value))
-				.map(cmd -> new Command.Choice(cmd.getName(), cmd.getName()))
+				.map(cmd -> new Choice(cmd.getName(), cmd.getName()))
 				.collect(Collectors.toList());
 			if (choices.size() > 25) {
 				choices.subList(25, choices.size()).clear();
 			}
 			event.replyChoices(choices).queue();
 		}
-		else if (groupMasterCmds.contains(event.getFullCommandName()) && event.getFocusedOption().getName().equals("master_group")) {
-			List<Map<String, Object>> groups = db.group.getMasterGroups(event.getGuild().getId());
-			if (!groups.isEmpty()) {
-				List<Command.Choice> choices = groups.stream()
-					.map(map -> {
-						String groupName = (String) map.get("name");
-						Integer groupId = (Integer) map.get("groupId");
-						return new Command.Choice(String.format("%s (ID: %s)", groupName, groupId), groupId);
-					})
-					.collect(Collectors.toList());
-				event.replyChoices(choices).queue();
-			} else {
+		else if (focusedOption.equals("group_owned")) {
+			List<Integer> groupIds = db.group.getOwnedGroups(event.getGuild().getIdLong());
+			if (groupIds.isEmpty()) {
 				event.replyChoices(Collections.emptyList()).queue();
-			}
-		}
-		else if (groupSyncCmds.contains(event.getFullCommandName()) && event.getFocusedOption().getName().equals("sync_group")) {
-			List<Integer> groupIds = db.group.getGuildGroups(event.getGuild().getId());
-			if (!groupIds.isEmpty()) {
-				List<Command.Choice> choices = groupIds.stream()
+			} else {
+				List<Choice> choices = groupIds.stream()
 					.map(groupId -> {
 						String groupName = db.group.getName(groupId);
-						return new Command.Choice(String.format("%s (ID: %s)", groupName, groupId), groupId);
+						return new Choice("%s (ID: %s)".formatted(groupName, groupId), groupId);
 					})
 					.collect(Collectors.toList());
 				event.replyChoices(choices).queue();
-			} else {
-				event.replyChoices(Collections.emptyList()).queue();
 			}
+		}
+		else if (focusedOption.equals("group_joined")) {
+			List<Integer> groupIds = db.group.getGuildGroups(event.getGuild().getIdLong());
+			if (groupIds.isEmpty()) {
+				event.replyChoices(Collections.emptyList()).queue();
+			} else {
+				List<Choice> choices = groupIds.stream()
+					.map(groupId -> {
+						String groupName = db.group.getName(groupId);
+						return new Choice("%s (ID: %s)".formatted(groupName, groupId), groupId);
+					})
+					.collect(Collectors.toList());
+				event.replyChoices(choices).queue();
+			}
+		}
+		else if (focusedOption.equals("group")) {
+			List<Integer> groupIds = new ArrayList<Integer>();
+			groupIds.addAll(db.group.getOwnedGroups(event.getGuild().getIdLong()));
+			groupIds.addAll(db.group.getManagedGroups(event.getGuild().getIdLong()));
+			if (groupIds.isEmpty()) {
+				event.replyChoices(Collections.emptyList()).queue();
+			} else {
+				List<Choice> choices = groupIds.stream()
+					.map(groupId -> {
+						String groupName = db.group.getName(groupId);
+						return new Choice("%s (ID: %s)".formatted(groupName, groupId), groupId);
+					})
+					.collect(Collectors.toList());
+				event.replyChoices(choices).queue();
+			}
+		}
+		else if (focusedOption.equals("panel_id")) {
+			String value = event.getFocusedOption().getValue();
+			long guildId = event.getGuild().getIdLong();
+			if (value.isBlank()) {
+				// if input is blank, show max 25 choices
+				List<Choice> choices = db.ticketPanels.getPanelsText(guildId).entrySet().stream()
+					.map(panel -> {
+						return new Choice("%s | %s".formatted(panel.getKey(), panel.getValue()), panel.getKey());
+					})
+					.collect(Collectors.toList());
+				event.replyChoices(choices).queue();
+				return;
+			}
+
+			Integer id = null;
+			try {
+				id = Integer.valueOf(value);
+			} catch(NumberFormatException ex) {}
+			if (id != null) {
+				// if able to convert input to Integer
+				String title = db.ticketPanels.getPanelTitle(id);
+				if (title != null) {
+					// if found panel with matching Id
+					event.replyChoice("%s | %s".formatted(id, MessageUtil.limitString(title, 80)), id).queue();
+					return;
+				}
+			}
+			event.replyChoices(Collections.emptyList()).queue();
+		}
+		else if (focusedOption.equals("tag_id")) {
+			String value = event.getFocusedOption().getValue();
+			long guildId = event.getGuild().getIdLong();
+			if (value.isBlank()) {
+				// if input is blank, show max 25 choices
+				List<Choice> choices = db.ticketTags.getTagsText(guildId).entrySet().stream()
+					.map(panel -> {
+						return new Choice("%s | %s".formatted(panel.getKey(), panel.getValue()), panel.getKey());
+					})
+					.collect(Collectors.toList());
+				event.replyChoices(choices).queue();
+				return;
+			}
+
+			Integer id = null;
+			try {
+				id = Integer.valueOf(value);
+			} catch(NumberFormatException ex) {}
+			if (id != null) {
+				// if able to convert input to Integer
+				String title = db.ticketTags.getTagText(id);
+				if (title != null) {
+					// if found panel with matching Id
+					event.replyChoice("%s - %s".formatted(id, title), id).queue();
+					return;
+				}
+			}
+			event.replyChoices(Collections.emptyList()).queue();
 		}
 	}
 }
